[package]
name = "debugging_helpers"
version = "0.1.0"
description = "Wrapper around reqwest for use in both native and wasm"
keywords = ["debug"]
repository = "https://github.com/c-git/debugging_helpers"
documentation = "https://docs.rs/debugging_helpers"
categories = ["development-tools::debugging", ""]
authors = ["One <one.bgz1@gmailcom"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
