[package]
name = "debugging_helpers"
version = "0.2.0"
description = "Trivial functions to make debugging easier"
keywords = ["debug"]
repository = "https://github.com/c-git/debugging_helpers"
documentation = "https://docs.rs/debugging_helpers"
categories = ["development-tools::debugging"]
authors = ["One <one.bgz1@gmail.com"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"

[dev-dependencies]
rstest = "0.22.0"
